[package]
name = "p2p-gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
bincode = "1.3.3"
quinn = "0.10.2"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rand_pcg = "0.3.1"
rand = "0.8.5"
bs58 = "0.5.1"
dns-lookup = "2.0.4"
rustls-pemfile = "1.0.4"
thiserror = "1.0.58"
backoff = { version = "0.4.0", features = ["tokio"] }

[dev-dependencies]
assert_cmd = "2.0.14"
